--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,24 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@import url('https://fonts.googleapis.com/css2?family=Mulish');
+:root{
+  font-family: 'Mulish', sans-serif;
+  /* font-family: 'Verdana', sans-serif; */
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    --primary-color: #004478;
+    --light-primary: #336699; /* Lighter variation */
+    --dark-primary: #002655; /* Darker variation */
+  
+    --accent-color: #ff9900; /* Accent color */
+    --light-accent: #ffcc66; /* Lighter accent */
+    --dark-accent: #cc8000; /* Darker accent */
+  
+    --background-color: #f5f5f5; /* Background color */
+    --text-color: #333333; /* Text color */
+    --link-color: #0066cc; /* Link color */
+    --light-hover: #55a0ea; /* Lighter variation */
+  
 }
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+*{
+  padding: 0;
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+  box-sizing: border-box; 
 }
