--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   /* font-family: 'Verdana', sans-serif; */
 
     --primary-color: #004478;
-    --light-primary: #336699; /* Lighter variation */
+    --light-primary: #064B7F; /* Lighter variation */
     --dark-primary: #002655; /* Darker variation */
   
     --accent-color: #ff9900; /* Accent color */
