dastageer: sidebar desktop design complete

--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -35,7 +35,6 @@
 
 .profile-section .name-container .header svg:hover{
     background-color: var(--primary-color);
-
     border: 2px solid var(--light-hover);
 }
 
@@ -43,18 +42,47 @@
 .profile-section .name-container .sub-header{
     font-size: .8rem;
     font-weight: 100;
-    /* font-style: italic; */
     margin-top: .2rem;
     display: inline-block;
     padding-left: .1rem;
 }
 
 .image-container{
-    /* background-color: red; */
     margin-right: .6rem;
     border-radius: 50%;
     overflow: hidden;
     width: 3rem;
     height: 3rem;
     border: 1px solid var(--light-primary)
+}
+
+/* menu item styles */
+
+.menu-item-container{
+    padding: .5rem 1rem .5rem 1rem;
+}
+
+.menu-item-container .menu-item{
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.menu-item-container:hover{
+    background-color: var(--dark-primary);
+}
+.menu-item-container .menu-item .menu-icon{
+    padding-top: .25rem;
+    padding-right: .8rem;
+    font-size: 1.2rem;
+}
+
+.menu-item-container .menu-item .menu-title{
+    flex-grow: 1;
+    display: flex;
+    justify-content:space-between ;
+}
+.menu-item-container .menu-item .menu-title .expand-arrow{
+    margin-right: .5rem;
+    padding-top: .25rem;
 }
