--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
     --primary-color: #004478;
     --light-primary: #064B7F; /* Lighter variation */
-    --dark-primary: #002655; /* Darker variation */
+    --dark-primary: #1d3f69; /* Darker variation */
   
     --accent-color: #ff9900; /* Accent color */
     --light-accent: #ffcc66; /* Lighter accent */
