--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -9,7 +9,7 @@
 
 .profile-section{
     border-bottom: 1px solid var(--primary-color);
-    min-height: 4rem;
+    height: 4.2rem;
     display: flex;
     align-items: center;
     padding: 1rem;
@@ -27,9 +27,10 @@
 }
 
 .profile-section .name-container .header svg{
-    margin-bottom: -.2rem;
+    /* margin-bottom: -.2rem; */
     transition: all .5s;
     border-radius: 50%;
+    display: inline;
 
 }
 
