--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Mulish');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root{
   font-family: 'Mulish', sans-serif;
-  /* font-family: 'Verdana', sans-serif; */
 
     --primary-color: #004478;
     --light-primary: #064B7F; /* Lighter variation */
@@ -15,6 +18,7 @@
     --text-color: #333333; /* Text color */
     --link-color: #0066cc; /* Link color */
     --light-hover: #55a0ea; /* Lighter variation */
+    font-size: 16px;
   
 }
 *{
