--- a/src/routes/Dashboard/dashboard.css
+++ b/src/routes/Dashboard/dashboard.css
@@ -7,29 +7,100 @@
     gap: 1rem;
     margin: 1rem;
     z-index: 0;
-    }
+}
     
+.div1 { grid-area: 1 / 1 / 2 / 2; }
+.div2 { grid-area: 1 / 2 / 2 / 3; }
+.div3 { grid-area: 1 / 3 / 2 / 4; }
+.div4 { grid-area: 1 / 4 / 2 / 5; }
+.div5 { grid-area: 2 / 4 / 3 / 5; }
+.div6 { grid-area: 3 / 4 / 4 / 5; }
+.div7 { grid-area: 4 / 4 / 5 / 5; }
+.div8 { grid-area: 4 / 3 / 5 / 4; }
+.div9 { grid-area: 4 / 2 / 5 / 3; }
+.div10 { grid-area: 4 / 1 / 5 / 2; }
+.div11 { grid-area: 3 / 1 / 4 / 2; }
+.div12 { grid-area: 2 / 1 / 3 / 2; }
+.div13 { grid-area: 2 / 2 / 4 / 4; 
+}
+
+.card-container{
+    /* background-color: red; */
+    /* background-color: white; */
+    min-height: 16rem;
+    border-radius: 4px;
+    color: black;
+    display: flex;
+
+
+}
+
+
+/* Media for mobile, Note: 1 card per row*/ 
+@media (max-width: 650px)  {
+    .stat-cards-container {
+      grid-template-columns: 1fr;
+      grid-template-rows: repeat(13, 1fr); 
+    }
+  
+    .div1 { grid-area: 1 / 1 / 2 / 2; }
+    .div2 { grid-area: 2 / 1 / 3 / 2; }
+    .div3 { grid-area: 3 / 1 / 4 / 2; }
+    .div4 { grid-area: 4 / 1 / 5 / 2; }
+    .div5 { grid-area: 5 / 1 / 6 / 2; }
+    .div6 { grid-area: 6 / 1 / 7 / 2; }
+    .div7 { grid-area: 7 / 1 / 8 / 2; }
+    .div8 { grid-area: 8 / 1 / 9 / 2; }
+    .div9 { grid-area: 9 / 1 / 10 / 2; }
+    .div10 { grid-area: 10 / 1 / 11 / 2; }
+    .div11 { grid-area: 11 / 1 / 12 / 2; }
+    .div12 { grid-area: 12 / 1 / 13 / 2; }
+    .div13 { grid-area: 13 / 1 / 14 / 2; }
+  }
+
+
+  /* small desktop scree, 3 cards per row */
+  @media (min-width: 901px) and (max-width: 1300px)  {
+    .stat-cards-container {
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(5, 1fr); 
+    }
+  
     .div1 { grid-area: 1 / 1 / 2 / 2; }
     .div2 { grid-area: 1 / 2 / 2 / 3; }
     .div3 { grid-area: 1 / 3 / 2 / 4; }
-    .div4 { grid-area: 1 / 4 / 2 / 5; }
-    .div5 { grid-area: 2 / 4 / 3 / 5; }
-    .div6 { grid-area: 3 / 4 / 4 / 5; }
-    .div7 { grid-area: 4 / 4 / 5 / 5; }
-    .div8 { grid-area: 4 / 3 / 5 / 4; }
-    .div9 { grid-area: 4 / 2 / 5 / 3; }
+    .div4 { grid-area: 2 / 1 / 3 / 2; }
+    .div5 { grid-area: 2 / 2 / 3 / 3; }
+    .div6 { grid-area: 2 / 3 / 3 / 4; }
+    .div7 { grid-area: 3 / 1 / 4 / 2; }
+    .div8 { grid-area: 3 / 2 / 4 / 3; }
+    .div9 { grid-area: 3 / 3 / 4 / 4; }
     .div10 { grid-area: 4 / 1 / 5 / 2; }
-    .div11 { grid-area: 3 / 1 / 4 / 2; }
-    .div12 { grid-area: 2 / 1 / 3 / 2; }
-    .div13 { grid-area: 2 / 2 / 4 / 4; }
+    .div11 { grid-area: 4 / 2 / 5 / 3; }
+    .div12 { grid-area: 4 / 3 / 5 / 4; }
+    .div13 { grid-area: 5 / 1 / 6 / 4; }
+  }
 
-    .card-container{
-        /* background-color: red; */
-        /* background-color: white; */
-        min-height: 16rem;
-        border-radius: 4px;
-        color: black;
-        display: flex;
+  /* Ipad, Table view: 2 per row */
 
-
+  @media (min-width: 651px) and (max-width: 900px) {
+    .stat-cards-container {
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(7, 1fr); 
     }
+  
+    .div1 { grid-area: 1 / 1 / 2 / 2; }
+    .div2 { grid-area: 1 / 2 / 2 / 3; }
+    .div3 { grid-area: 2 / 1 / 3 / 2; }
+    .div4 { grid-area: 2 / 2 / 3 / 3; }
+    .div5 { grid-area: 3 / 1 / 4 / 2; }
+    .div6 { grid-area: 3 / 2 / 4 / 3; }
+    .div7 { grid-area: 4 / 1 / 5 / 2; }
+    .div8 { grid-area: 4 / 2 / 5 / 3; }
+    .div9 { grid-area: 5 / 1 / 6 / 2; }
+    .div10 { grid-area: 5 / 2 / 6 / 3; }
+    .div11 { grid-area: 6 / 1 / 7 / 2; }
+    .div12 { grid-area: 6 / 2 / 7 / 3; }
+    .div13 { grid-area: 7 / 1 / 8 / 3; }
+  }
+  
