--- a/src/routes/Dashboard/dashboard.css
+++ b/src/routes/Dashboard/dashboard.css
@@ -40,7 +40,8 @@
 @media (max-width: 650px)  {
     .stat-cards-container {
       grid-template-columns: 1fr;
-      grid-template-rows: repeat(13, 1fr); 
+      grid-auto-rows: 750px;
+      grid-template-rows: repeat(12, 1fr); 
     }
   
     .div1 { grid-area: 1 / 1 / 2 / 2; }
@@ -56,6 +57,22 @@
     .div11 { grid-area: 11 / 1 / 12 / 2; }
     .div12 { grid-area: 12 / 1 / 13 / 2; }
     .div13 { grid-area: 13 / 1 / 14 / 2; }
+
+    .mt-1.pr-5 .comment-block{
+      margin-left: 5rem;
+      /* margin-top: -.4rem; */
+      display: block;
+    }
+
+    .chart-container{
+      /* background-color: red; */
+     max-width:85vw ;
+
+    }
+    .card-container{
+      max-width: 92vw;
+      /* height: max-content; */
+    }
   }
 
 
@@ -84,9 +101,16 @@
   /* Ipad, Table view: 2 per row */
 
   @media (min-width: 651px) and (max-width: 900px) {
-    .stat-cards-container {
+    /* .stat-cards-container {
       grid-template-columns: repeat(2, 1fr);
       grid-template-rows: repeat(7, 1fr); 
+    } */
+
+    .stat-cards-container{
+
+      grid-template-columns: repeat(2, 1fr);
+      grid-auto-rows: 450px;
+      grid-template-rows: repeat(6, 1fr); 
     }
   
     .div1 { grid-area: 1 / 1 / 2 / 2; }
